--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+app {
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+  background-color: aqua;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.header-nav {
+  width: 30%;
+}
+.header-nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cart-box {
+  width: 50px;
+  height: 40px;
+  position: relative;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.cart-icon {
+  width: 32px;
+  height: 32px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart-counter {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
+.home-container {
+  width: 100%;
+}
+.home-slider {
+  width: 100%;
+}
+.home-title {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 30px;
+  font-weight: bold;
+}
+.random-cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  row-gap: 20px;
+}
+.menu-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.footer-container {
+  width: 100%;
+  background-color: blue;
+  height: 100px;
 }
