--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,214 @@
-app {
+.app {
   width: 100%;
-  max-width: 1920px;
+  max-width: 1440px;
   margin: 0 auto;
+  font-size: 16px;
+  background: linear-gradient(90deg, #231e52, #302b63, #293b61);
+  background-size: 400% 400%;
+  animation: anim 5s infinite ease-in-out;
 }
 .header-container {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  background-color: #9c8eb3;
+  padding: 15px 0;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+@keyframes anim {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+.header-title {
+  font-size: 30px;
+  color: #000;
+  text-transform: uppercase;
+  text-align: center;
+  display: flex;
+  font-weight: bold;
+}
+.header-title span {
+  transition: 1.5s;
+  letter-spacing: 1px;
+}
+.header-title:hover span {
+  filter: blur(20px);
+  opacity: 0;
+  transform: scale(2);
+}
+.header-title span:nth-child(1) {
+  transition-delay: 0.1s;
+}
+.header-title span:nth-child(2) {
+  transition-delay: 0.3s;
+}
+.header-title span:nth-child(3) {
+  transition-delay: 0.5s;
+}
+.header-title span:nth-child(4) {
+  transition-delay: 0.7s;
+}
+.header-nav {
+  width: 40%;
+}
+
+.header-nav ul {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: aqua;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
-.header-nav {
-  width: 30%;
-}
-.header-nav ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cart-box {
-  width: 50px;
+.header-nav ul li {
+  font-weight: bold;
   height: 40px;
-  position: relative;
+  width: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 20px;
+  letter-spacing: 1px;
 }
-.cart-icon {
-  width: 32px;
+.header-nav ul li:hover {
+  background-color: #fff;
+}
+.cart-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  position: relative;
+  width: 60px;
+  border-radius: 50%;
+}
+.cart-box:hover {
+  background-color: #fff;
+}
+.cart-box img {
   height: 32px;
+  width: 32px;
 }
-.cart-counter {
+.cart-box p {
   position: absolute;
-  right: -10px;
-  top: 0px;
+  top: 1px;
+  right: 0px;
+  font-weight: bold;
+  color: #000;
+}
+.cart-box:hover p {
+  opacity: 0;
 }
 .home-container {
   width: 100%;
+  padding-top: 20px;
+}
+.home-main-title {
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 15px 0;
+  letter-spacing: 1.6px;
+  color: #fff;
 }
 .home-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  max-width: 700px;
+  margin: 0 auto;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.home-slider img {
+  display: block;
   width: 100%;
+
+  animation: slider 30s infinite ease-in-out;
+}
+@keyframes slider {
+  0% {
+    transform: translate(-100%, 0);
+  }
+  25% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(100%, 0);
+  }
+  75% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
 }
 .home-title {
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
+  padding: 15px 0;
+  letter-spacing: 1.6px;
+  color: #fff;
 }
 .random-cards {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
   flex-wrap: wrap;
-  margin: 0 auto;
-  padding-bottom: 20px;
-  row-gap: 20px;
-}
-.menu-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  row-gap: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  row-gap: 30px;
+  padding: 20px 0;
 }
 .footer-container {
   width: 100%;
-  background-color: blue;
-  height: 100px;
+  background-color: #8c73b3;
+}
+.footer-media-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  column-gap: 20px;
+}
+.footer-title {
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+}
+.footer-media-container img {
+  height: 32px;
+  width: 32px;
+}
+.contact-container {
+  width: 100%;
+  height: 700px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.contact-info {
+  width: 35%;
+  height: 450px;
+  max-width: 300px;
+}
+.contact-info p {
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+}
+iframe {
+  width: 35%;
+  border: 0;
+  max-width: 600px;
+  height: 450px;
 }
