--- a/src/card.css
+++ b/src/card.css
@@ -1,27 +1,36 @@
 .card-box {
   width: 100%;
-  max-width: 400px;
+  max-width: 300px;
   margin: 0 auto;
-  border: 1px solid black;
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  height: 300px;
   font-size: 16px;
   border-radius: 20px;
+  background-color: #8c73b3;
+  position: relative;
+  flex-wrap: wrap;
 }
 .card-icon {
-  width: 250px;
+  width: 100%;
   height: 200px;
-  margin-bottom: 30px;
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin-bottom: 10px;
 }
 .card-name {
-  margin-bottom: 10px;
-  width: 100%;
-  max-width: 200px;
+  width: 85%;
+  margin: 0 auto;
+  color: #000;
+  font-weight: bold;
+  line-height: 20px;
   text-align: center;
+  height: 40px;
+  margin-bottom: 10px;
+}
+.card-price {
+  text-align: center;
+  padding-left: 190px;
+  font-weight: bold;
+  color: #000;
 }
 .card-see-more {
   text-align: center;
@@ -34,4 +43,26 @@
   align-items: center;
   width: 100%;
   max-width: 150px;
+}
+.add-btn {
+  border-radius: 5px;
+  height: 25px;
+  width: 90px;
+  background-color: rgb(255, 208, 0);
+  border: none;
+  font-weight: bold;
+  position: absolute;
+  top: 15px;
+  right: 20px;
+}
+.view-btn {
+  border-radius: 5px;
+  height: 25px;
+  width: 90px;
+  background-color: rgb(255, 208, 0);
+  border: none;
+  font-weight: bold;
+  position: absolute;
+  top: 15px;
+  left: 20px;
 }
