--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.header-nav ul li {
+.header-nav ul a {
   font-weight: bold;
   height: 40px;
   width: 80px;
@@ -78,9 +78,13 @@
   border-radius: 20px;
   letter-spacing: 1px;
 }
-.header-nav ul li:hover {
+.header-nav ul a:hover {
   background-color: #fff;
 }
+.active {
+  background-color: #fff;
+}
+
 .cart-box {
   display: flex;
   align-items: center;
@@ -109,7 +113,7 @@
 }
 .home-container {
   width: 100%;
-  padding-top: 20px;
+  padding: 20px 0;
 }
 .home-main-title {
   text-align: center;
@@ -169,8 +173,11 @@
   padding: 20px 0;
 }
 .footer-container {
+  padding: 10px 0;
   width: 100%;
   background-color: #8c73b3;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 .footer-media-container {
   display: flex;
@@ -191,11 +198,27 @@
 }
 .contact-container {
   width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+.contact-title {
+  text-align: center;
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  margin-top: 25px;
+}
+.contact-box {
+  width: 100%;
   height: 700px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
+
 .contact-info {
   width: 35%;
   height: 450px;
@@ -211,4 +234,179 @@ iframe {
   border: 0;
   max-width: 600px;
   height: 450px;
+}
+.menu-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px 0;
+}
+.menu-filter-text {
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.menu-card-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: 40px;
+  padding: 30px 0;
+}
+.selection-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+}
+.selection-container select {
+  width: 100%;
+  max-width: 150px;
+  height: 25px;
+  border-radius: 5px;
+  background-color: rgb(255, 208, 0);
+  font-weight: bold;
+  border: 1px solid black;
+}
+.selection-container option {
+  font-weight: bold;
+}
+.detail-container {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.detail-name {
+  text-align: center;
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 100px;
+}
+.detail-info-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.detail-img {
+  border-radius: 20px;
+  width: 100%;
+  max-width: 400px;
+}
+.detail-product-desc {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.detail-description {
+  color: #fff;
+  font-size: 28px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+.detail-buttons {
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+.detail-add {
+  width: 100px;
+  height: 50px;
+  background-color: rgb(255, 208, 0);
+  font-weight: bold;
+  border: 3px solid #000;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.detail-add:hover {
+  background-color: #fff;
+}
+.cart-container {
+  width: 100%;
+  padding: 30px;
+}
+.cart-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 120px;
+  margin-bottom: 40px;
+}
+.cart-title {
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 30px;
+}
+.cart-total-title {
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #fff;
+}
+.added-card-container {
+  width: 100%;
+  row-gap: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.added-card-quantity {
+  position: absolute;
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 170px;
+  left: 25%;
+}
+.quantity-btn {
+  border-radius: 50%;
+  background-color: rgb(255, 208, 0);
+  font-weight: bold;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+  border: 2px solid black;
+  cursor: pointer;
+}
+.quantity-btn:active {
+  background-color: #fff;
+}
+.quantity-title {
+  background-color: #fff;
+  height: 25px;
+  width: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  font-weight: bold;
+  border: 2px solid black;
 }
