--- a/src/card.css
+++ b/src/card.css
@@ -9,11 +9,14 @@
   position: relative;
   flex-wrap: wrap;
 }
+.card-box:hover {
+  box-shadow: 0 0 10px #fff;
+}
 .card-icon {
   width: 100%;
   height: 200px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   margin-bottom: 10px;
 }
 .card-name {
@@ -54,6 +57,11 @@
   position: absolute;
   top: 15px;
   right: 20px;
+  border: 2px solid black;
+  cursor: pointer;
+}
+.add-btn:hover {
+  background-color: #fff;
 }
 .view-btn {
   border-radius: 5px;
@@ -65,4 +73,9 @@
   position: absolute;
   top: 15px;
   left: 20px;
+  border: 2px solid black;
+  cursor: pointer;
+}
+.view-btn:hover {
+  background-color: #fff;
 }
