--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -180,6 +183,7 @@
   padding: 20px 0;
 }
 .footer-container {
+  margin-top: auto;
   padding: 10px 0;
   width: 100%;
   background-color: #8c73b3;
@@ -282,8 +286,9 @@ iframe {
   font-weight: bold;
   border: 1px solid black;
 }
-.selection-container option {
+.selection-container select option {
   font-weight: bold;
+  width: 100%;
 }
 .detail-container {
   width: 100%;
@@ -369,7 +374,6 @@ iframe {
 .cart-total-title {
   font-size: 25px;
   font-weight: bold;
-  text-align: center;
   margin-bottom: 10px;
   color: #fff;
 }
