--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,7 @@
   margin: 0 auto;
   overflow: hidden;
   border-radius: 10px;
+  box-shadow: 0 0 10px #fff;
 }
 .home-slider img {
   display: block;
@@ -170,7 +171,7 @@
   text-align: center;
   font-size: 25px;
   font-weight: bold;
-  padding: 15px 0;
+  margin: 30px 0;
   letter-spacing: 1.6px;
   color: #fff;
 }
@@ -226,11 +227,17 @@
   width: 100%;
   height: 700px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 
 .contact-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 10px;
   width: 35%;
   height: 450px;
   max-width: 300px;
@@ -240,11 +247,14 @@
   font-weight: bold;
   font-size: 20px;
 }
-iframe {
-  width: 35%;
-  border: 0;
-  max-width: 600px;
-  height: 450px;
+.map {
+  max-width: 400px;
+  width: 40vw;
+  height: 40vw;
+  max-height: 40vw;
+  height: 80%;
+  box-shadow: 0 0 10px #fff;
+  border-radius: 10px;
 }
 .menu-container {
   width: 100%;
@@ -317,6 +327,7 @@ iframe {
   border-radius: 20px;
   width: 100%;
   max-width: 400px;
+  box-shadow: 0 0 10px #fff;
 }
 .detail-product-desc {
   width: 100%;
